Fixed old stretch

--- a/css/index.css
+++ b/css/index.css
@@ -94,7 +94,6 @@ img {
 }
 /* Navigation */
 .navigation {
-	top: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -118,6 +117,16 @@ nav a {
 nav a:hover {
 	background-color: #024351;
 	color: white;
+}
+
+@media(min-width: 801px){
+	body {
+		margin-top: 50px;
+	}
+	.navigation {
+		top: 0;
+		position: fixed;
+	}
 }
 
 @media(max-width: 800px){
